[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7" # Check crates.io for the latest 0.7.x or newer stable version
tokio = { version = "1", features = ["full"] } # "full" enables all tokio features, including macros and IO
serde = { version = "1.0", features = ["derive"] } # For serializing and deserializing data
serde_json = "1.0" # For JSON specifically
uuid = { version = "1", features = ["v4", "serde"] } # For generating unique IDs and serde support
